src/objects/CIMNote__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>CIM Notes</relationshipLabel>
        <relationshipName>CIM_Notes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>CIMID__c</fullName>
        <externalId>true</externalId>
        <label>CIM ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatedByInCIM__c</fullName>
        <label>Created by in CIM</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CreatedDateInCIM__c</fullName>
        <label>Created date in CIM</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Note__c</fullName>
        <label>Note</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>CIM Note</label>
    <nameField>
        <label>CIM Note Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CIM Notes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>